# bloat

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: bump-homebrew-bloatmac.yml  release-bloatmac.yml  release.yml
Casks/: bloatmac.rb
bloatmac/: README.md
bloatmac/bloatmac/: AppState.swift  ContentView.swift  bloatmacApp.swift
bloatmac/bloatmac.xcodeproj/: project.pbxproj
bloatmac/bloatmac/Components/: Btn.swift  CountUp.swift  Donut.swift  EmptyState.swift  LiveAreaGraph.swift  Metallic.swift  PressureGauge.swift  Primitives.swift  Ring.swift  ScanningIndicator.swift  Sparkline.swift  Treemap.swift
bloatmac/bloatmac/Models/: CleanupLog.swift  LiveAnalytics.swift  LiveBattery.swift  LiveCloud.swift  LiveDashboard.swift  LiveDiskHealth.swift  LiveDownloadsCache.swift  LiveDuplicates.swift  LiveLargeFiles.swift  LiveMaintenance.swift  LiveMemory.swift  LiveNetwork.swift  LivePermissionsAudit.swift  (+12 more)
examples/: plugins.toml
examples/lua/: heavy_hitters.lua  node_monitor.lua
examples/plugins/: apfs-snapshots.toml  brew-cleanup.toml  node-heap  redis-monitor
src/: alerts.rs  analyzer.rs  app.rs  cleaner.rs  history.rs  main.rs  memory_actions.rs  permissions.rs  scanner.rs  system_monitor.rs  tree.rs
src/plugins/: config.rs  lua_engine.rs  mod.rs  protocol.rs  runner.rs
src/rules/: apps.rs  dev.rs  homebrew.rs  ios_backups.rs  mail.rs  media.rs  messages.rs  mod.rs  photos.rs  probe.rs  quicklook_fonts.rs  simulators.rs  system.rs  system_admin.rs
src/ui/: cleanup.rs  explorer.rs  htop.rs  logs.rs  mod.rs  overview.rs  permissions.rs
(+23 files in other folders)
