[package]
name = "bloat"
version = "0.1.0"
edition = "2021"
description = "An htop-style disk storage analyzer and cleanup TUI for macOS"

[dependencies]
fuzzy-matcher = "0.3"
ratatui = "0.29"
crossterm = "0.28"
jwalk = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5"
blake3 = "1"
human_bytes = "0.4"
libc = "0.2"
dirs = "6"
sysinfo = "0.33"
notify-rust = "4"

[dev-dependencies]
tempfile = "3"
